added  -XX:+UseCondCardMark -XX:-UseBiasedLocking options for tests launching