@@ -122,7 +122,7 @@
                         <runOrder>alphabetical</runOrder>
                         <forkMode>always</forkMode>
                         <!-- -XX:+PrintGCDetails -->
-                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewSize=3g -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA</argLine>
+                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewSize=3g -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking</argLine>
                     </configuration>
                 </plugin>
             </plugins>
@@ -145,7 +145,7 @@
                             <artifactId>maven-surefire-plugin</artifactId>
                             <version>2.12</version>
                             <configuration>
-                                <argLine>-server -Xms1280m -Xmx1280m -Xss1m -XX:NewSize=960m -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA</argLine>
+                                <argLine>-server -Xms1280m -Xmx1280m -Xss1m -XX:NewSize=960m -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking</argLine>
                             </configuration>
                         </plugin>
                     </plugins>
